# Ferz2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeCache.txt  Ferz2D  Makefile  cmake_install.cmake
cmake/include/: Makefile  cmake_install.cmake
engine/: Ferz2D.hpp
engine/debug_manager/: CMakeLists.txt  engine_debuger.cpp  engine_debuger.hpp
engine/object/: CMakeLists.txt  object.cpp  object.hpp
engine/properties/: CMakeLists.txt  properties.cpp  properties.hpp
headers/: headers.hpp  objects_headers.hpp
src/: engine.cpp  main.cpp  objects.cpp
src/engine/objects_lib/: CMakeLists.txt  objects.cpp  objects_headers.hpp
src/headers/: Ferz.hpp  headers.hpp  objects_headers.hpp
src/include/: CMakeLists.txt
src/sfml/include/Graphics/: Font.hpp  Image.hpp  RenderTexture.hpp  RenderWindow.hpp  Texture.hpp  Transform.hpp  View.hpp
src/sfml/lib/: libsfml-audio-d.so.2.6.0  libsfml-graphics.so.2.6.0  libsfml-system-d.so.2.6.0  libsfml-system.so.2.6.0  libsfml-window.so.2.6.0
test/: test.cpp
